# BaxterInterface

./: .gitignore  README.md  README.md~
ASIFT_tests/demo_ASIFT_src/: ASIFT_matcher.cpp  ASIFT_matcher.hpp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  compute_asift_keypoints.cpp  demo_ASIFT  demo_ASIFT.cpp  test_ASIFT  test_ASIFT.cpp
ASIFT_tests/demo_ASIFT_src/book_training/: train_image_002.yml
ASIFT_tests/demo_ASIFT_src/io_png/: Makefile  cmake_install.cmake
ASIFT_tests/demo_ASIFT_src/libMatch/: Makefile  cmake_install.cmake
ASIFT_tests/demo_ASIFT_src/libNumerics/: Makefile  cmake_install.cmake
ASIFT_tests/demo_ASIFT_src/results/: matching.txt
Visp_tests/generic-rgbd/: CMakeLists.txt~
Visp_tests/learn_tests/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  book.init  book.xml~  book2.cao  cmake_install.cmake  detection_limited_info  detection_multi_tracker  tutorial-detection-object-mbt2.cpp
Visp_tests/manual_tests/: Makefile  book.cao  book.init~  book.xml  book2.init~  box.init~  cmake_install.cmake  tutorial-mb-generic-tracker.cpp
Visp_tests/matching/: cmake_install.cmake  tutorial-matching-keypoint  tutorial-matching-keypoint-homography  tutorial-matching-surf-deprecated
Visp_tests/training dataset/: book.init~  cMo.txt~  train_image_000.yml~  train_image_005.yml~
Visp_tests/training dataset/book_training/: train_image_000.yml  train_image_001.yml  train_image_003.yml  train_image_006.yml  train_image_007.yml~
Visp_tests/training dataset/box_training/: train_image_001.yml~  train_image_003.yml  train_image_004.yml  train_image_005.yml~
Visp_tests/tutorial-tracking-mb/generic/: teabox.0.pos  teabox.xml~  tutorial-mb-generic-tracker  tutorial-mb-generic-tracker-full
Visp_tests/tutorial-tracking-mb/object/: Makefile  cmake_install.cmake  cube.xml~  teabox.0.pos  tutorial-detection-object-mbt  tutorial-detection-object-mbt-deprecated  tutorial-detection-object-mbt2
asift_gen/: ASIFT_matcher.hpp  CMakeLists.txt  CMakeLists.txt~  Makefile  asift_match.cpp
asift_gen/io_png/: Makefile  cmake_install.cmake
asift_gen/io_png/libs/: Makefile  cmake_install.cmake
asift_gen/libMatch/: Makefile  cmake_install.cmake
asift_gen/libNumerics/: Makefile  cmake_install.cmake
asift_match/: CMakeLists.txt  CMakeLists.txt~  package.xml~  setup.py  setup.py~
asift_match/launch/: asift_match.launch  asift_match.launch~
asift_match/reference_data/: robobo_references.txt
asift_match/src/: ASIFT_matcher.cpp  ASIFT_matcher.hpp  ROS_matcher.cpp  ROS_matcher.hpp  compute_asift_keypoints.cpp  compute_asift_matches.cpp  orsa.cpp
asift_match/src/libMatch/: Makefile
asift_match/src/libNumerics/: cmake_install.cmake
asift_matching/: CMakeLists.txt  package.xml  package.xml~
asift_matching/launch/: asift_match.launch  asift_match.launch~
asift_matching/reference_data/: train_image_005.yml~
asift_matching/src/: ASIFT_matcher.cpp  ROS_matcher.cpp  ROS_matcher.hpp  ROS_matcher_node.cpp
asift_matching/src/libMatch/: cmake_install.cmake
my_pcl_tutorial/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
my_pcl_tutorial/src/: plannar_segmentation.cpp
ongoing/ASIFT_tests/demo_ASIFT_src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  cmake_install.cmake
ongoing/HaarCascade_tests/: negatives.txt  negatives.txt~  positives.txt  positives.txt~
ongoing/HaarCascade_tests/classifier/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
ongoing/HaarCascade_tests/samples/: 000.png.vec  001.jpg.vec  011.jpg.vec  012.jpg.vec  032.png.vec  064.png.vec  096.png.vec  128.png.vec  160.png.vec  192.png.vec  224.png.vec  256.png.vec  288.png.vec
ongoing/HaarCascade_tests/trained_classifiers/: haar.py  haar.py~
ongoing/Visp_tests/generic-rgbd/: CMakeCache.txt  Makefile  cmake_install.cmake
ongoing/Visp_tests/learn_tests/: CMakeLists.txt~  Makefile  box.cao  detection_limited_info.cpp  detection_multi_tracker.cpp  train_image_001.yml~  tutorial-detection-object-mbt2  tutorial-detection-object-mbt2.cpp
ongoing/Visp_tests/manual_tests/: CMakeCache.txt  book.init  train_image_000.yml  train_image_000.yml~  tutorial-mb-generic-tracker-full.cpp
ongoing/Visp_tests/matching/: CMakeCache.txt  Makefile  tutorial-matching-keypoint-SIFT  tutorial-matching-surf-homography-deprecated
ongoing/Visp_tests/training dataset/: book2.init~  train_image_001.yml~  train_image_007.yml~  train_image_008.yml~
ongoing/interface_tests/: package.xml
ongoing/interface_tests/msg/: InterfaceConfigT.msg  StateSpace.msg~  StateSpaceT.msg
ongoing/interface_tests/src/: interface_test.cpp  marker_test.cpp  panel_test.hpp
ongoing/pcl_tests/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ongoing/pcl_tests/src/: plannar_segmentation.cpp
pcl_tests/src/: plannar_segmentation.cpp
rviz_interface/: CMakeLists.txt  package.xml~
rviz_interface/interface_tests/: CMakeLists.txt  CMakeLists.txt~  panel_plugin.xml  panel_plugin.xml~  plugin_description.xml~
rviz_interface/interface_tests/src/: listener_test.cpp  panel_test.cpp
rviz_interface/launch/: interface.launch  interface.launch~  interface_camera.launch~  interface_matching.launch  interface_matching.launch~  interface_plannar_seg.launch  interface_plannar_seg.launch~
rviz_interface/msg/: InterfaceConfig.msg  InterfaceConfig.msg~  NamedPoint.msg~  StateSpace.msg  StateSpace.msg~
rviz_interface/rviz_interface/: CMakeLists.txt  package.xml  package.xml~  panel_plugin.xml  panel_plugin.xml~
rviz_interface/rviz_interface/launch/: interface_camera.launch~  interface_matching.launch  interface_matching.launch~  interface_plannar_seg.launch  interface_plannar_seg.launch~
rviz_interface/rviz_interface/msg/: InterfaceConfig.msg  (+3 more)
rviz_interface/src/: InteractiveObject.cpp  InteractiveObject.hpp  InterfacePanel.cpp  RvizInterface.cpp  RvizInterface.hpp
(+43 files in other folders)
